// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InformationSnippet /> should render with a column format 1`] = `
<div
<<<<<<< HEAD
  class="sc-iUuytg jxYQrz"
=======
  class="sx5vu60 sx5vu60v4l1f--direction-column"
>>>>>>> b80098c (feat(stitches): convert to Stitches for Styling and Theming)
  data-testid="InformationSnippet"
>
  <svg
    height="24"
    role="presentation"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      fill="currentColor"
    />
  </svg>
  <div
    class="sxjs3r4"
  >
    <span
      class="sxefk7c"
    >
      Full Name
      : 
    </span>
    John Snow
  </div>
</div>
`;

exports[`<InformationSnippet /> should render with a row format 1`] = `
<div
  class="sx5vu60 sx5vu60gs0ec--direction-row"
  data-testid="InformationSnippet"
>
  <svg
    height="24"
    role="presentation"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      fill="currentColor"
    />
  </svg>
  <div
    class="sxjs3r4"
  >
    <span
      class="sxefk7c"
    >
      Full Name
      : 
    </span>
    John Snow
  </div>
</div>
`;
